k8s/environments/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-management-app
  namespace: hotel-management-prod
spec:
  replicas: 3  # Plus de répliques pour la production
  template:
    spec:
      containers:
      - name: django-app
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
